# footballiq

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
tests/: test_placeholder.py
