[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "footballiq"
version = "0.1.0"
description = "A Python package for football analytics and insights."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Joel Akinsanya", email = "akinsanyajoel82@gmail.com" }
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10"
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.3"
]

dev = [
    "pytest>=7.0",
    "hypothesis>=6.0"
]

[project.urls]
Homepage = "https://homepage-url.com"
Repository = "https://github.com/kiojoel/footballiq"